@startuml ApplicationClasses

!include https://raw.githubusercontent.com/plantuml-stdlib/C4-PlantUML/master/C4_Deployment.puml

interface IUserService <<interface>> #aliceblue;line:blue;text:blue {}

class UserService <<service>> #PaleGreen;line:Black;text:Black implements IUserService {}

' from domain layer
abstract User<Domain Layer> <<abstract>> #Pink;line:Black;line.dotted;text:gray {
  # id: long 
  # username: String
  # fullname: String
  # password: String
  # role: Role
  # state: State
}

' from infrastructure layer
interface IUserRepository<Infrastructure Layer> <<interface>> #aliceblue;line:blue;text:blue {}

' from domain layer
enum Role<Domain Layer> <<enumeration>> #LightBlue;line:Black;text:Black {
  Administrator
  Patient
  ClinicalStaff
  AppointmentManager
}

IUserService ..> User
UserService ..> User
UserService -> IUserRepository
IUserService ..> Role
UserService ..> Role

@enduml